--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,86 @@
+aiohttp==3.8.6
+aiosignal==1.3.1
+annotated-types==0.6.0
+anyio==3.7.1
 asgiref==3.7.2
+async-timeout==4.0.3
+attrs==23.1.0
+blis==0.7.11
+catalogue==2.0.10
+certifi==2023.7.22
+charset-normalizer==3.3.0
+click==8.1.7
+cloudpathlib==0.15.1
+confection==0.1.3
+cymem==2.0.8
+dataclasses-json==0.6.1
 Django==4.2.5
 django-cors-headers==4.3.0
 django-filter==23.3
 djangorestframework==3.14.0
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0-py3-none-any.whl
+exceptiongroup==1.1.3
+filelock==3.12.4
+frozenlist==1.4.0
+fsspec==2023.9.2
+greenlet==3.0.0
+huggingface-hub==0.17.3
+idna==3.4
+Jinja2==3.1.2
+joblib==1.3.2
+jsonpatch==1.33
+jsonpointer==2.4
+langchain==0.0.312
+langcodes==3.3.0
+langsmith==0.0.43
 Markdown==3.4.4
+MarkupSafe==2.1.3
+marshmallow==3.20.1
+mpmath==1.3.0
+multidict==6.0.4
+murmurhash==1.0.10
+mypy-extensions==1.0.0
+networkx==3.1
+nltk==3.8.1
+numpy==1.26.0
+packaging==23.2
+pathy==0.10.2
+Pillow==10.0.1
+preshed==3.0.9
+pydantic==2.4.2
+pydantic_core==2.10.1
 PyPDF2==3.0.1
 pytz==2023.3.post1
+PyYAML==6.0.1
+regex==2023.10.3
+requests==2.31.0
+safetensors==0.4.0
+scikit-learn==1.3.1
+scipy==1.11.3
+sentence-transformers==2.2.2
+sentencepiece==0.1.99
+smart-open==6.4.0
+sniffio==1.3.0
+spacy==3.7.1
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+SQLAlchemy==2.0.21
 sqlparse==0.4.4
+srsly==2.4.8
+sympy==1.12
+tenacity==8.2.3
+thinc==8.2.1
+threadpoolctl==3.2.0
+tokenizers==0.14.1
+torch==2.1.0
+torchvision==0.16.0
+tqdm==4.66.1
+transformers==4.34.0
+typer==0.9.0
+typing-inspect==0.9.0
 typing_extensions==4.8.0
 tzdata==2023.3
+urllib3==2.0.6
+wasabi==1.1.2
+weasel==0.3.2
+yarl==1.9.2
