--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -18,6 +18,7 @@ Django==4.2.5
 django-cors-headers==4.3.0
 django-filter==23.3
 djangorestframework==3.14.0
+dnspython==2.4.2
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0-py3-none-any.whl
 exceptiongroup==1.1.3
 filelock==3.12.4
@@ -33,6 +34,7 @@ jsonpointer==2.4
 langchain==0.0.312
 langcodes==3.3.0
 langsmith==0.0.43
+loguru==0.7.2
 Markdown==3.4.4
 MarkupSafe==2.1.3
 marshmallow==3.20.1
@@ -46,10 +48,12 @@ numpy==1.26.0
 packaging==23.2
 pathy==0.10.2
 Pillow==10.0.1
+pinecone-client==2.2.4
 preshed==3.0.9
 pydantic==2.4.2
 pydantic_core==2.10.1
 PyPDF2==3.0.1
+python-dateutil==2.8.2
 pytz==2023.3.post1
 PyYAML==6.0.1
 regex==2023.10.3
@@ -59,6 +63,7 @@ scikit-learn==1.3.1
 scipy==1.11.3
 sentence-transformers==2.2.2
 sentencepiece==0.1.99
+six==1.16.0
 smart-open==6.4.0
 sniffio==1.3.0
 spacy==3.7.1
