--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,15 +5,23 @@ anyio==3.7.1
 asgiref==3.7.2
 async-timeout==4.0.3
 attrs==23.1.0
+backoff==2.2.1
+bcrypt==4.0.1
 blis==0.7.11
+cachetools==5.3.2
 catalogue==2.0.10
 certifi==2023.7.22
 charset-normalizer==3.3.0
+chroma-hnswlib==0.7.3
+chromadb==0.4.15
 click==8.1.7
 cloudpathlib==0.15.1
+coloredlogs==15.0.1
 confection==0.1.3
 cymem==2.0.8
 dataclasses-json==0.6.1
+Deprecated==1.2.14
+distro==1.8.0
 Django==4.2.5
 django-cors-headers==4.3.0
 django-filter==23.3
@@ -21,16 +29,29 @@ djangorestframework==3.14.0
 dnspython==2.4.2
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0-py3-none-any.whl
 exceptiongroup==1.1.3
+fastapi==0.104.1
 filelock==3.12.4
+flatbuffers==23.5.26
 frozenlist==1.4.0
 fsspec==2023.9.2
+google-auth==2.23.4
+googleapis-common-protos==1.61.0
 greenlet==3.0.0
+grpcio==1.59.2
+h11==0.14.0
+httpcore==1.0.1
+httptools==0.6.1
+httpx==0.25.1
 huggingface-hub==0.17.3
+humanfriendly==10.0
 idna==3.4
+importlib-metadata==6.8.0
+importlib-resources==6.1.1
 Jinja2==3.1.2
 joblib==1.3.2
 jsonpatch==1.33
 jsonpointer==2.4
+kubernetes==28.1.0
 langchain==0.0.312
 langcodes==3.3.0
 langsmith==0.0.43
@@ -38,6 +59,7 @@ loguru==0.7.2
 Markdown==3.4.4
 MarkupSafe==2.1.3
 marshmallow==3.20.1
+monotonic==1.6
 mpmath==1.3.0
 multidict==6.0.4
 murmurhash==1.0.10
@@ -45,19 +67,39 @@ mypy-extensions==1.0.0
 networkx==3.1
 nltk==3.8.1
 numpy==1.26.0
+oauthlib==3.2.2
+onnxruntime==1.16.2
+openai==0.28.0
+opentelemetry-api==1.21.0
+opentelemetry-exporter-otlp-proto-common==1.21.0
+opentelemetry-exporter-otlp-proto-grpc==1.21.0
+opentelemetry-proto==1.21.0
+opentelemetry-sdk==1.21.0
+opentelemetry-semantic-conventions==0.42b0
+overrides==7.4.0
 packaging==23.2
 pathy==0.10.2
 Pillow==10.0.1
 pinecone-client==2.2.4
+posthog==3.0.2
 preshed==3.0.9
+protobuf==4.25.0
+pulsar-client==3.3.0
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
 pydantic==2.4.2
 pydantic_core==2.10.1
+pypdf==3.17.0
 PyPDF2==3.0.1
+PyPika==0.48.9
 python-dateutil==2.8.2
+python-dotenv==1.0.0
 pytz==2023.3.post1
 PyYAML==6.0.1
 regex==2023.10.3
 requests==2.31.0
+requests-oauthlib==1.3.1
+rsa==4.9
 safetensors==0.4.0
 scikit-learn==1.3.1
 scipy==1.11.3
@@ -72,10 +114,12 @@ spacy-loggers==1.0.5
 SQLAlchemy==2.0.21
 sqlparse==0.4.4
 srsly==2.4.8
+starlette==0.27.0
 sympy==1.12
 tenacity==8.2.3
 thinc==8.2.1
 threadpoolctl==3.2.0
+tiktoken==0.5.1
 tokenizers==0.14.1
 torch==2.1.0
 torchvision==0.16.0
@@ -85,7 +129,14 @@ typer==0.9.0
 typing-inspect==0.9.0
 typing_extensions==4.8.0
 tzdata==2023.3
-urllib3==2.0.6
+urllib3==1.26.18
+uvicorn==0.24.0.post1
+uvloop==0.19.0
 wasabi==1.1.2
+watchfiles==0.21.0
 weasel==0.3.2
+websocket-client==1.6.4
+websockets==12.0
+wrapt==1.16.0
 yarl==1.9.2
+zipp==3.17.0
